--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <link rel="icon" type="image/png" href="favicon.png"/>
 
   <!-- Add your Google Maps API key here -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR-API-KEY"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA20MwogzGehdgyuFesA7qO-uRuXwBaRVE"></script>
 
   <title>google_maps_in_flutter</title>
   <link rel="manifest" href="manifest.json">
